--- a/index.html
+++ b/index.html
@@ -4,13 +4,15 @@
 {
 "img": "",
 "name" "RPS",
-"desc": "1st Game created with visuals ( Unfinished ).",
+"desc": "First game I created with visuals ( Unfinished ).",
+"url": "",
 "id": 1
 },
 {
 "img": "",
 "name" "Quotes Generator",
 "desc": "A simple website that generate quotes.",
+"url": "",
 "id": 2
 }
 ]
