--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 },
 {
 "img": "",
-"name" "Quotes Generator",
+"name": "Quotes Generator",
 "desc": "A simple website that generate quotes.",
 "url": "",
 "id": 2
