--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 [
 {
-"img": "",
-"name": "RPS",
-"desc": "First game I created with visuals ( Unfinished ).",
-"url": "",
+"img": "https://raw.githubusercontent.com/0ex1n8/webfolio-json/main/panote_app.png",
+"name": "Panote",
+"desc": "Simple note react-application.",
+"url": "https://0ex1n8.github.io/panote-app/",
 "id": 1
 },
 {
